# lupyd-desktop

./: .env  .env.zero  .gitignore  .todo  BACKUP_ORIGINAL_CODE.md  IMPLEMENTATION_SUMMARY.md  LOCAL_NOTIFICATIONS_GUIDE.md  MIGRATION.md  Makefile  NATIVE_BRIDGE_IMPLEMENTATION.md  NOTIFICATION_FEATURES_GUIDE.md  PURE_NATIVE_KOTLIN_SOLUTION.md  PURE_NATIVE_SOLUTION.md  QUICK_REFERENCE.md  QUICK_START_NATIVE.md  QUICK_START_PURE_KOTLIN.md  README.md  TESTING_GUIDE.md  TROUBLESHOOTING_NATIVE_BRIDGE.md  activity,analytics,removed.txt  adblogs.sh  build.sh  capacitor.config.ts  index.html  package-lock.json  package.json  pnpm-lock.yaml  stats.html  tsconfig.app.json  vite.config.ts
.cargo/: config.toml
android/: build.gradle  capacitor.settings.gradle  gradlew
android/app/: build.gradle  capacitor.build.gradle  env.gradle
android/app/java/firefly_signal/: firefly_signal.kt
android/app/release/: output-metadata.json
android/app/src/debug/: google-services.json
android/app/src/main/: AndroidManifest.xml  google-services.json  jniLibs
firefly-lib/: .todo  Cargo.toml  build.sh  copy-db.sh  proto-gen.sh
firefly-lib/.cargo/: config.toml
firefly-lib/protobufs/: message.proto
firefly-lib/src/: error.rs  group.rs  lib.rs  logger.rs  utils.rs  websocket.rs
firefly-lib/src/db/: address.rs  auth.rs  conversations.rs  ffi_stores.rs  group_messages.rs  group_stores.rs  keyvalue.rs  messages.rs  mod.rs  stores.rs
firefly-lib/src/pb/: mod.rs
firefly-lib/src/pb/firefly/: firefly.rs
lupyd-web-vite/: capacitor.config.ts  index.html  package.json  tsconfig.app.json  vite.config.ts
lupyd-web-vite/android/: local.properties
lupyd-web-vite/public/: robots.txt
lupyd-web-vite/src/: App.tsx  main.tsx
lupyd-web-vite/src/app/: globals.css
lupyd-web-vite/src/app/(landing)/: page.tsx
lupyd-web-vite/src/app/dashboard/: page.tsx
lupyd-web-vite/src/app/saas/: globals.css  layout.tsx
lupyd-web-vite/src/components/: page-header.tsx  snackbar.tsx
lupyd-web-vite/src/components/dashboard/: create-post.tsx  dashboard-layout.tsx  event-card.tsx  post-card.tsx  share-modal.tsx  video-player.tsx
lupyd-web-vite/src/components/groups/: groups-workspace-pane.tsx
lupyd-web-vite/src/components/ui/: sidebar.tsx  user-menu.tsx
lupyd-web-vite/src/context/: auth-context.tsx  dialog-context.tsx  user-image-context.tsx
lupyd-web-vite/src/lib/: utils.ts
public/: sitemap.xml
src/: App.css  App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: encryption_plugin.rs  lib.rs  notification.rs
src-tauri/tests/: sqlite.rs
src/app/: ThemeContext.tsx  ThemeToggle.tsx  assignUsername.tsx  globals.css  layout.tsx
src/app/(landing)/: ColorBends.tsx  layout.tsx  page.tsx
src/app/blocked-accounts/: page.tsx
src/app/dashboard/: page.tsx
src/app/saas/: page.tsx
src/components/: NotificationTestButton.tsx  PrivacyPolicy.tsx  TermsOfUse.tsx  animated-card.tsx  auth-status.tsx  cached-page-wrapper.tsx  page-cache-provider.tsx  page-transition.tsx  pull-to-refresh.tsx  scroll-restorer.tsx  theme-provider.tsx  user-avatar.tsx
src/components/dashboard/: comment.tsx  create-post.tsx  dashboard-layout.tsx  message-item.tsx  notifications-dropdown.tsx  persistent-post-feed.tsx  persistent-shell.tsx  persistent-view.tsx  post-card.tsx  post-feed.tsx  profile-settings.tsx  report-dialog.tsx  share-modal.tsx  trending-topic.tsx  user-card.tsx
src/components/groups/: add-member-dialog.tsx  channel-chat.tsx  channel-list.tsx  channel-permissions.tsx  channel-projects.tsx  create-channel-dialog.tsx  group-tasks.tsx  groups-workspace-pane.tsx  member-role-selector.tsx  permissions-matrix.tsx  role-manager.tsx
src/components/ui/: TermsOfService.tsx  metric-card.tsx  notification-dropdownsaas.tsx  status-indicator.tsx  tubelight-navbar.tsx
src/context/: apiService.tsx  auth-context.tsx  dialog-context.tsx  encryption-plugin.tsx  firefly-context.tsx  message-store.tsx  notification-context.tsx  persistence-provider.tsx  query-client.tsx  saved-posts.tsx  tauri-encryption-plugin.ts  tauri-encryption-plugin.tsx  user-call-context.tsx  user-image-context.tsx  userdata-context.tsx
src/hooks/: use-group-permissions.ts  use-path-params.ts  use-persisted-feed.ts  use-persistent-query.ts  use-scroll-boundary-guard.ts  useVisualViewportHeight.ts
src/lib/: utils.ts
src/plugins/: native-notification.ts
src/types/: permission-types.ts
src/utils/: keyboard-handler.ts  persistence.ts
(+143 files in other folders)
