[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.9.5", features = ["tray-icon"] }
tauri-plugin-log = "2"
firefly-signal = { git = "https://github.com/lupyd/firefly-lib", version = "0.1.0" }
firefly_protos = { git = "https://github.com/lupyd/firefly-mls.git", package = "firefly-protos" }
tauri-plugin-deep-link = "2"
tauri-plugin-notification = "2"
tokio = { version = "1.0", features = ["full"] }
base64 = "0.22"
once_cell = "1.19"
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "fs"] }
rand = "0.8"
tracing = "0.1"
tracing-subscriber = "0.3"
chrono = { version = "0.4", features = ["serde"] }
sqlx = { version = "0.8.6", features = ["sqlite", "runtime-tokio", "chrono"] }

anyhow = "1.0"
thiserror = "1.0"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-single-instance = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
